--- a/package.json
+++ b/package.json
@@ -17,5 +17,18 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
+    }
+  ]
+  
 }
