--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "description": "",
   "scripts": {
+    "start" : "node server.js",
     "devStart": "nodemon server.js"
   },
   "dependencies": {
